<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="21dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_day_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/input_day_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Day Description"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>
</RelativeLayout>