<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.WeekViewActivity"
    tools:showIn="@layout/activity_week_view" >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/week_days_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:paddingTop="@dimen/recycler_view_padding_top"
        android:paddingBottom="@dimen/recycler_view_padding_bottom"
        android:clipToPadding="false" />
</RelativeLayout>
