<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exercise_action_buttons"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/edit_layout"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginRight="@dimen/list_item_margin_left_and_right"
        android:background="@color/warning">

        <ImageView
            android:id="@+id/edit_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_edit_white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:duplicateParentState="true"/>

    </RelativeLayout>

</LinearLayout>