<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/list_item_margin_top_and_bottom"
        android:layout_marginBottom="@dimen/list_item_margin_top_and_bottom"
        android:layout_marginLeft="@dimen/list_item_margin_left_and_right"
        android:layout_marginRight="@dimen/list_item_margin_left_and_right"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_item_padding">

            <TextView
                android:id="@+id/day_of_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Sub Text"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>